[package]
name = "rh"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN"]
description = "A minimal HTTP server in Rust"
repository = "https://github.com/makalin/rh"
license = "MIT"

[dependencies]
# Core dependencies will be added as needed 
log = "0.4"
env_logger = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0" 